--- a/.gitignore
+++ b/.gitignore
@@ -44,3 +44,10 @@ buck-out/
 \.buckd/
 *.keystore
       
+# Yarn
+.yarn/*
+!.yarn/patches
+!.yarn/plugins
+!.yarn/releases
+!.yarn/sdks
+!.yarn/versions
